---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: redeclaration of `struct T~2` with different tag `union`
   ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:4:11]
   │
 2 │     struct T;
   │            ┬  
   │            ╰── previously declared here as `struct`
   │ 
 4 │     union T;
   │           ┬  
   │           ╰── redeclared here as `union`
───╯

Error: redeclaration of `struct U~5 complete` with different tag `union`
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:13:11]
    │
  8 │     struct U {
    │            ┬  
    │            ╰── previously declared here as `struct`
    │ 
 13 │     union U value;
    │           ┬  
    │           ╰── redeclared here as `union`
────╯

Error: redeclaration of `union V~9 complete` with different tag `struct`
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:22:12]
    │
 17 │     union V {
    │           ┬  
    │           ╰── previously declared here as `union`
    │ 
 22 │     struct V {
    │            ┬  
    │            ╰── redeclared here as `struct`
────╯

Error: redeclaration of `union Name~12` with different tag `struct`
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:31:12]
    │
 29 │     union Name;
    │           ──┬─  
    │             ╰─── previously declared here as `union`
    │ 
 31 │     struct Name {
    │            ──┬─  
    │              ╰─── redeclared here as `struct`
────╯

Error: redeclaration of `enum E~17 complete` with different tag `struct`
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:41:12]
    │
 39 │     enum E { A, B };
    │          ┬  
    │          ╰── previously declared here as `enum`
    │ 
 41 │     struct E;
    │            ┬  
    │            ╰── redeclared here as `struct`
────╯

Error: redeclaration of `struct Wat~22` with different tag `enum`
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:47:10]
    │
 45 │     struct Wat;
    │            ─┬─  
    │             ╰─── previously declared here as `struct`
    │ 
 47 │     enum Wat { X };
    │          ─┬─  
    │           ╰─── redeclared here as `enum`
────╯

Error: redeclaration of `enum Incomplete~26` with different tag `struct`
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:53:12]
    │
 51 │     enum Incomplete;
    │          ─────┬────  
    │               ╰────── previously declared here as `enum`
    │ 
 53 │     struct Incomplete;
    │            ─────┬────  
    │                 ╰────── redeclared here as `struct`
────╯

Error: redeclaration of `struct AlsoIncomplete~29` with different tag `enum`
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:59:10]
    │
 57 │     struct AlsoIncomplete;
    │            ───────┬──────  
    │                   ╰──────── previously declared here as `struct`
    │ 
 59 │     enum AlsoIncomplete;
    │          ───────┬──────  
    │                 ╰──────── redeclared here as `enum`
────╯
